<resources>
    <string name="app_name">Shoppy</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register">register</string>
    <string name="have_account_login">Have Account ! Login</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="shop_name">shop Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="product">Product</string>
    <string name="product_description">Product Description</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="discount">Discount</string>
    <string name="add_product">Add Product</string>
</resources>