<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".customer.CustomerRegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".customer.CustomerRegistrationActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/sellerImg"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/ic_boy"
                app:civ_border_color="@color/black"
                app:civ_border_width="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/edge_bg_shape">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/userName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:background="@drawable/edit_text_design"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/username"
                            android:padding="10dp" />

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:background="@drawable/edit_text_design"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/email"
                            android:padding="10dp" />

                        <EditText
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:background="@drawable/edit_text_design"
                            android:fontFamily="@font/poppins"
                            android:hint="Phone"
                            android:padding="10dp"
                            tools:ignore="HardcodedText" />

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:background="@drawable/edit_text_design"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/password"
                            android:padding="10dp" />

                        <EditText
                            android:id="@+id/shopName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:background="@drawable/edit_text_design"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/shop_name"
                            android:padding="10dp" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/country"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="2dp"
                                android:padding="5dp"
                                android:background="@drawable/edit_text_design"
                                android:enabled="false"
                                android:fontFamily="@font/poppins"
                                android:hint="@string/country" />

                            <EditText
                                android:id="@+id/state"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="2dp"
                                android:padding="5dp"
                                android:background="@drawable/edit_text_design"
                                android:enabled="false"
                                android:fontFamily="@font/poppins"
                                android:hint="@string/state" />

                            <EditText
                                android:id="@+id/city"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="2dp"
                                android:padding="5dp"
                                android:background="@drawable/edit_text_design"
                                android:enabled="false"
                                android:fontFamily="@font/poppins"
                                android:hint="@string/city" />
                        </LinearLayout>

                        <EditText
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/edit_text_design"
                            android:enabled="false"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/address"
                            android:padding="10dp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/register"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:fontFamily="@font/poppins"
                    android:backgroundTint="#303F9F"
                    android:layout_gravity="center_horizontal"
                    android:text="Register"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/guideline9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline8"
                    app:layout_constraintVertical_bias="0.68" />

                <TextView
                    android:id="@+id/haveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="Have Account ! Login"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline9"
                    app:layout_constraintVertical_bias="0.195" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="20dp"
                    app:layout_constraintGuide_percent="0.2" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="20dp"
                    app:layout_constraintGuide_percent="0.75" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.85"
                    app:layout_constraintGuide_begin="20dp" />

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:id="@+id/location"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_baseline_location_on_24"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>