<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".customer.CustomerProfileActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Edit Profile"
        android:fontFamily="@font/mont"
        android:textColor="@color/black"
        android:background="@color/background_color"
        android:gravity="center"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/customerImg"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_boy"
            android:layout_marginTop="25dp"
            app:civ_border_color="@color/black"
            app:civ_border_width="1dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:background="@drawable/edge_bg_shape">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="16dp">


               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_marginTop="20dp">

                   <EditText
                       android:id="@+id/userName"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_margin="5dp"
                       android:fontFamily="@font/poppins"
                       android:background="@drawable/edit_text_design"
                       android:padding="13dp"
                       android:enabled="false"
                       android:hint="@string/username" />

                   <EditText
                       android:id="@+id/email"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_margin="5dp"
                       android:fontFamily="@font/poppins"
                       android:background="@drawable/edit_text_design"
                       android:padding="13dp"
                       android:enabled="false"
                       android:hint="@string/email" />

                   <EditText
                       android:id="@+id/phone"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_margin="5dp"
                       android:fontFamily="@font/poppins"
                       android:background="@drawable/edit_text_design"
                       android:padding="13dp"
                       android:enabled="false"
                       android:hint="@string/phone" />


                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="50dp"
                       android:orientation="horizontal"
                       android:layout_marginStart="5dp"
                       android:layout_marginEnd="5dp">

                       <EditText
                           android:layout_width="0dp"
                           android:layout_height="match_parent"
                           android:layout_weight="1"
                           android:hint="Country"
                           android:enabled="false"
                           android:padding="5dp"
                           android:fontFamily="@font/poppins"
                           android:layout_margin="2dp"
                           android:background="@drawable/edit_text_design"
                           android:id="@+id/country"/>

                       <EditText
                           android:layout_width="0dp"
                           android:layout_height="match_parent"
                           android:layout_weight="1"
                           android:padding="5dp"
                           android:enabled="false"
                           android:fontFamily="@font/poppins"
                           android:layout_margin="2dp"
                           android:background="@drawable/edit_text_design"
                           android:hint="State"
                           android:id="@+id/state"/>

                       <EditText
                           android:layout_width="0dp"
                           android:layout_height="match_parent"
                           android:layout_weight="1"
                           android:padding="5dp"
                           android:enabled="false"
                           android:fontFamily="@font/poppins"
                           android:layout_margin="2dp"
                           android:background="@drawable/edit_text_design"
                           android:hint="City"
                           android:id="@+id/city"/>
                   </LinearLayout>
                   <EditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:layout_margin="5dp"
                       android:enabled="false"
                       android:fontFamily="@font/poppins"
                       android:background="@drawable/edit_text_design"
                       android:hint="Address"
                       android:padding="13dp"
                       android:id="@+id/address"/>

                   <Button
                       android:id="@+id/update"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="20dp"
                       android:layout_marginStart="20dp"
                       android:layout_marginEnd="20dp"
                       android:layout_marginBottom="20dp"
                       android:background="@drawable/button_shape_design"
                       android:fontFamily="@font/mont"
                       android:padding="5dp"
                       android:text="Update"
                       android:textColor="@color/white" />


               </LinearLayout>
        </androidx.cardview.widget.CardView>
     </LinearLayout>
    </LinearLayout>
</LinearLayout>